--- a/crowdvest-app/public/index.html
+++ b/crowdvest-app/public/index.html
@@ -4,6 +4,15 @@
     <title>React App</title>
   </head>
   <body>
+    <h1>Hello World</h1>
     <div id="root"></div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
   </body>
 </html>
