--- a/crowdvest-app/public/index.html
+++ b/crowdvest-app/public/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>React App</title>
+    <title>CrowdVest</title>
   </head>
   <body>
-    <h1>Hello World</h1>
     <div id="root"></div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/6.2.4/firebase-app.js"></script>
